--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
+# application.properties (COMMIT THIS SAFELY TO GIT)
+
 spring.application.name=epr_web
 
-spring.datasource.url=jdbc:mysql://127.0.0.1/epr_web
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/epr_web
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# This line changes the port to 8000
 server.port=8000
+server.servlet.session.timeout=5m
+
